2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/defaults.m4: Add --with-security-file configure option
	* common-src/ammessage.c: Improve messages
	* common-src/security-file.c: Use DEFAULT_SECURITY_FILE, check the
	  path is secure
	* common-src/security-file.h (check_security_file_permission): Remove
	* NEWS, ReleaseNotes: Add --with-security-file configure option

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Do not use gnuish of realpath

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Use AM_READLINK
	* config/amanda/progs.m4: Verify that $READLINK is what we want and
	  set AM_READLINK

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix for 32 bits perl

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Fix for errno in message
	* installcheck/Amanda_Rest_Services_senddiscover_amgtar.pl,
	  installcheck/Amanda_Rest_Amcheck.pl: Fix
	* man/xml-source/amssl.8.xml: Improve documentation

2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Fix for automatic test

2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c, common-src/amutil.c,
	  xfer-src/xfer-test.c: Fix bug found by coverity

2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: Fix small memory leak

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/amanda_configure.m4: Invoke AMANDA_PROG_READLINK
	* config/amanda/dumpers.m4: use READLINK if REALPATH is not available
	* config/amanda/progs.m4: Find readlink

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/make_security_file.c: Print '='

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* Improve reporting of security message

2016-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.9
	* ReleaseNotes: Change in 3.3.9
