@@ -1,4 +1,7 @@
 2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* man/xml-source/amfetchdump.8.xml: Add --run-client-scripts
+
+2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* config/amanda/defaults.m4: Add --with-security-file configure option
 	* common-src/ammessage.c: Improve messages
 	* common-src/security-file.c: Use DEFAULT_SECURITY_FILE, check the
